bmt-ops-dashboard/bmt-ops-dashboard_v1_Service_ops-dashboard-postgres-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: ops-dashboard-postgres-lb
  namespace: bmt-ops-dashboard
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    cnpg.io/cluster: ops-dashboard-postgres
    role: primary
  type: LoadBalancer
