bmt-ops-dashboard/bmt-ops-dashboard_v1_Service_ops-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: ops-dashboard
  namespace: bmt-ops-dashboard
spec:
  ports:
  - port: 80
    targetPort: 8001
  selector:
    app: ops-dashboard
