bmt-ops-dashboard/bmt-ops-dashboard_networking.k8s.io-v1_Ingress_ops-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: ops-dashboard-ingress
  namespace: bmt-ops-dashboard
spec:
  ingressClassName: nginx
  rules:
  - host: sy-stem.berkeley.mt
    http:
      paths:
      - backend:
          service:
            name: ops-dashboard
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sy-stem.berkeley.mt
    secretName: ops-dashboard-ingress-tls
