bmt-ops-dashboard/bmt-ops-dashboard_cilium.io-v2_CiliumNetworkPolicy_allow-ingress-to-postgres.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-to-postgres
  namespace: bmt-ops-dashboard
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: ops-dashboard-postgres
  ingress:
  - fromEntities:
    - all
